<resources>
    <string name="app_name">FolkecenterMobileApp</string>
    <string name="main_page_title">Nordic Folkecenter</string>
    <string name="grid_news">Recent News</string>
    <string name="grid_events">Upcoming Events</string>
    <string name="grid_guided_tour">Guided Tour</string>
    <string name="grid_map">Interactive Map</string>
    <string name="grid_history">Our History</string>
    <string name="grid_tips">Sustainable Tips</string>
    <string name="grid_training">Training</string>
    <string name="grid_quiz">Quiz Game</string>
    <string name="news_read_more">Read More</string>
    <string name="news_subtitle_date">Date</string>
    <string name="news_title">Title</string>
    <string name="guided_tour_title">Guided Tour</string>
    <string name="grid_test_field">Test Field</string>
    <string name="grid_biodome">Biodome</string>
    <string name="grid_cafe_solaire">Cafe Solaire</string>
    <string name="grid_workshop">Workshop</string>
    <string name="grid_plus_house">Plus House</string>
    <string name="grid_passive_house">Passive House</string>
    <string name="grid_skibstedfjord">SkibstedFjord</string>
    <string name="grid_water_treatment">Water Treatment</string>
    <string name="grid_oil_lab">Plant Oil Lab</string>
    <string name="grid_wind_museum">Wind Museum</string>
    <string name="grid_floating_foundation">Floating Foundation</string>
    <string name="test_field_title">Test Field</string>
    <string name="test_field_audio_tour">Test Field Audio Tour</string>
    <string name="test_field_text_tour_title">Audio Tour Transcription</string>
    <string name="test_field_text_tour">The location of Folkecenter (strong and frequent winds) makes it the ideal location for testing small wind turbines. Folkecenter’s testfield is includes different models and components on test, from different manufacturers around the world. The test field has:Standard foundations for wind turbines up to 75 kW.Location for 10 small wind turbines up to 10 kW.Internal cable connections for electricity and measurements.Measuring masts.3 wells (6 meters deep) for testing of wind pumps.Containers for measuring equipment and supplies.Tests of wind turbines from 60 watts up to 90 kW have been conducted for Danish and foreign companies.Since 1984 the 75 kW blue wind turbine has supplied Folkecenter with electricity. The turbine, designed by Folkecenter, was meant as starting building block for companies willing to enter the wind market. Together with other models of the DAN series, the turbine has a documentation which is accessible for those searching for a reliable model to enter the wind business.Folkecenter has now a new test field, located in Hundborg. More information can be found on the link below:
https://smallwind.dk/
</string>
    <string name="biodome_title">Biodome</string>
    <string name="biodome_audio_tour">Biodome Audio Tour</string>
    <string name="biodome_text_tour">The Biodome has 3 floors. The inner diameter of the floor plan is 14.4 meters and the largest inner diameter (floor plan at 1st floor) is 15.5 meters. The building is constructed with a skeleton of aluminum pipes, which are covered with 3-layer polycarbonate sheets. The building is manufactured in Colorado, USA and was established in 1992.
The floor plan is equipped with plant beds and with two 23 m3 water pools. The pools are the key of the system: the Azolla plants floating on the surface purify the rain water and act as food for fishes. The fishes than produce manure, which enriches the water. Finally, the water is used to irrigate the plants, making the whole process free of chemical fertilizers.
The 1st floor is furnished with plant beds with 50m2 cultivated soils. An automatic time-controlled irrigation system is also present.
Without the addition of heat other than solar energy, there is a Mediterranean climate in the Biodome, all year round. During summer, the top floor can reach even higher temperatures, allowing to grow plants typical of warmer climates.
 The Biodome is a so-called minimal construction with a light-bearing skeleton. Plant cultivation is possible for up to 10 months a year. In the coldest winter days there may be light frost at night, but the pools will not freeze.
The Biodome demonstrates how to integrate water circuits, recycling nutrient salts and soil and aquaculture.
</string>
    <string name="cafe_solaire_title">Cafe Solaire</string>
    <string name="cafe_solaire_audio_tour">Cafe Solaire Audio Tour</string>
    <string name="workshop_title">Workshop</string>
    <string name="workshop_audio_tour">Workshop Audio Tour</string>
    <string name="plus_house_title">Plus House</string>
    <string name="plus_house_audio_tour">Plus House Audio Tour</string>
    <string name="plus_house_text_tour">With a floor area of 600 m2, the building was constructed in 1992 by Folkecenter with support of the EU and the Danish Energy Agency. The Plus Energy House is a test house that produces more energy than it uses itself; it is composed of many different individual components, each of which has proven their efficiency.The house has a shape of a large solar collector: the south-facing facade consists of two layers of glass with 20cm between each layer; polystyrene balls stored in the silos behind the building can be injected in the façade, allowing to have insulation only when needed (for example, during the night), but also allowing to provide shade to the whole building, or part of it and, in this way, to control indoor climate. The house is also equipped with a heat pump.There are different temperature levels at the different floors: during a sunny summer day, the top floor can reach over 50°C. It has been documented through measuring that the house can deliver more heat to the district heating system of Folkecenter than it is supplied in the form of electricity to the heat pump, reason for which the house is called Plus Energy House.</string>
    <string name="passive_house_title">Passive House</string>
    <string name="passive_house_audio_tour">Passive House Audio Tour</string>
    <string name="passive_house_text_tour">The term Passive House refers to the fact that the house does not, in principle, need to be supplied with energy for neither heating nor cooling. This means that there is virtually no heat loss, and that the building is optimized to utilize the heat supply that occurs through solar radiation and human activity. The Definition of a passive house is:
(1)The energy consumption for space heating is at a maximum of 15 kWh/m2.
(2)The total energy consumption is at a maximum of 120 kWh/m2.
(3)Air tightness: Maximum 0.6/h air change.
Note that the m2 is considered interior and not exterior, which is normal in Denmark.Architectural heat loss can be minimized by minimizing the buildings surface, as it is known from traditional Danish construction practice. To utilize the passive solar heat, the houses windows and living rooms are oriented to the south. Good daylight conditions are crucial for both the comfort of the house and for lower energy consumption.Constructively, heat loss is avoided by means of a thick and close insulation without thermal bridges, as well as the use of windows and doors with very low U-value, and more.Note how windows and doors are mounted in the insulating layer and only partially in the lightweight concrete wall. The lightweight concrete walls are chosen because of their thermal accumulation properties.Finally, the mechanical ventilation and heat recovery is a special feature of the Passive House.This ensures a continuous airflow through the house, where the fresh cool outdoor air is heated with the heat from the "used" indoor air.Price:In addition to the energy requirements, the house tests the possibility of reducing building expenses, normally quite high for passive houses. The present building has a m2 price of a maximum of 10,000 DKK, including VAT for materials and crafts expenses. The smaller the building area, the larger the relative surface of the climate screen (roof and outer walls) and the more difficult it is to keep the square meter price down.The Passive House here at the Folkecenter is the smallest passive house in Denmark so far (100 m2). The low price is achieved by building a very simple house.The efforts to minimize the building surface mean not only that heat loss is reduced but also a reduction of material costs.Labor-intensive details are avoided. The unilateral slope of the roof is completely without penetration to the chimney, ventilation, windows and more. The house has four perpendicular corners and no bay windows, niches or extensions. The number of windows is limited to a few rooms.Other economic solutions include prefabricated light concrete walls, the terrain deck insulation material, roof and outer wall steel sheet cladding and, in particular, the absence of central heating systems.Moreover, the costs of electricity and ventilation are almost the same as in new buildings.Environment:To the extent that it has been possible within the given energy and economic framework, it is sought to use environmentally friendly materials, as well as local suppliers and craftsmen.Thus, paper wool is the main component of ceiling and wall insulation. Waterproofed wood has only been used where it has been necessary, which means hardly any.The choice of woods like larch and pine tree in a good quality is crucial to this being possible.There is access to the Passive House by appointment. Ask at the reception.
</string>
    <string name="skibsted_fjord_title">Skibstedfjord</string>
    <string name="skibsted_fjord_audio_tour">Skibstedfjord Audio Tour</string>
    <string name="quiz_game_title">Folkecenter Quiz Game</string>
    <string name="quiz_game_instructions">Currently the Folkecenter Quiz Game is not available on mobile devices and can only be played on desktop platforms. Follow the link below for installation.</string>
    <string name="quiz_game_button">Open Game Link</string>
    <string name="training_title">Training Program</string>
    <string name="training_text">We offer a wide range of training and education programmes and activities meant to meet the main needs of current and future professionals in the field. Workshops, conferences, renewable energy courses or the trainee programme are some of the examples.</string>
    <string name="training_button">More Details</string>
    <string name="tips_title">Sustainable Tips</string>
    <string name="main_tips_text">Saving the planet sounds huge doesn’t it? And in essence, it is. But there are many simple ways you can do your bit to help. Check out this list of easy ways to go green and do your bit to help! These are steps that anyone can and should take to help reduce the effect of years of abuse.</string>
    <string name="open_tips_button">Open Tips</string>
</resources>