<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:weightSum="8">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/tips_title"
            android:text="@string/tips_title"
            android:textSize="34sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="2.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <ImageView
            android:id="@+id/tips_main_image"
            android:src="@drawable/tips_main_image"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="3.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/tips_main_text"
            android:text="@string/main_tips_text"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <Button
            android:id="@+id/open_tips_button"
            android:text="@string/open_tips_button"
            android:textSize="30sp"
            android:onClick="openTip2"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>


</LinearLayout>