<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:weightSum="8">

    <RelativeLayout
        android:layout_weight="1.75"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/training_program_title"
            android:text="@string/training_title"
            android:textSize="34sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <ImageView
            android:id="@+id/training_image"
            android:src="@drawable/training_picture"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="3.25"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/training_details"
            android:text="@string/training_text"
            android:textSize="21sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <Button
            android:id="@+id/training_button"
            android:text="@string/training_button"
            android:textSize="30sp"
            android:onClick="openWebViewTraining"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>


</LinearLayout>