<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiodomeTourActivity"
    android:background="#fcfcfc">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_biodome"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:title="@string/biodome_title"
            app:expandedTitleMarginStart="15dp"
            app:expandedTitleMarginEnd="55dp"
            android:background="@drawable/biodome_picture">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_biodome"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/biodome_audio_tour"
                    android:layout_gravity="center_vertical|start"
                    android:padding="15dp"
                    android:gravity="center"/>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/biodome_play_button"
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/play_button_image"
                    android:onClick="play"/>

                <ImageView
                    android:id="@+id/biodome_pause_button"
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pause_button_image"
                    android:onClick="pause"/>

                <ImageView
                    android:id="@+id/biodome_reset_button"
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/reset_button_image"
                    android:onClick="stop"/>



            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/test_field_text_tour_title"
                    android:layout_gravity="center_vertical|start"
                    android:padding="15dp"
                    android:gravity="center"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/test_field_text_tour"
                android:textSize="50px"
                android:padding="15dp"
                android:layout_gravity="center"
                />


        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>